# VG101_SU16-15

./: .gitignore  README.md
FAQ/: Glut On Windows.md  Week2.md  proj.md  scanf.md
FAQ/clion_guide/: clion_guide.md
Grading rubics/: ex1_rubic.md  exam1.md  hw1.md  hw4.md
RC Manualscript/: pointer.md  project_specs.pptx  rc1.md  rc2.md  rc4.md
clion_example/: CMakeLists.txt  main.c
ctemplate/: CMakeLists.txt  README  assignment.h  ex1.c  ex2.c  main.c
rc_code/: add.m  fun.m  rc5_example.rar  script.m
rc_code/mid2rev/: CMakeLists.txt  ascii.c  hw6_ex1.c  hw6_matrix.c  mid2.c  mid2_ans.c  scratch.c
rc_code/rc10/: CMakeLists.txt  abc.cpp  count.cpp  counter.c  counterDV1.cpp  counterDV2.cpp  counterPro.cpp  counterPro.h  counterV1.cpp  counterV1.h  counterV2.cpp  counterV2.h  file.cpp  lifeSpan.cpp  mat.txt  out.txt  string.cpp
rc_code/rc5_example/: CMakeLists.txt  debug_macro.c
rc_code/rc5_example/CTemplate/: README  assignment.h  ex1.c  ex3.c  ex4.c
rc_code/rc5_example/io/: main.c
rc_code/rc5_example/random/: sum.c  test.c
